# ALLauncher

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING.md  README.md  flake.nix  rebrand-to-ALLauncher.sh  rebrand_to_al.sh  restore_prism_meta.sh  undo_rename.sh  vcpkg.json
.github/: FUNDING.yml  pull_request_template.md
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
cmake/: MacOSXBundleInfo.plist.in  commonPresets.json  linuxPreset.json  macosPreset.json  windowsMSVCPreset.json  windowsMinGWPreset.json
flatpak/: org.allauncher.ALLauncher.yml
launcher/: Application.cpp  Application.h  ApplicationMessage.cpp  BaseInstance.cpp  BaseInstance.h  BaseVersionList.cpp  CMakeLists.txt  Commandline.cpp  DataMigrationTask.cpp  DesktopServices.cpp  Exception.h  FastFileIconProvider.cpp  FastFileIconProvider.h  FileIgnoreProxy.cpp  FileIgnoreProxy.h  FileSystem.cpp  FileSystem.h  GZip.cpp  GZip.h  InstanceCopyTask.cpp  InstanceDirUpdate.cpp  InstanceDirUpdate.h  InstanceImportTask.cpp  InstanceImportTask.h  InstanceList.cpp  InstanceList.h  InstancePageProvider.h  InstanceTask.h  JavaCommon.cpp  Json.cpp  Json.h  LaunchController.cpp  LaunchController.h  LoggedProcess.cpp  LoggedProcess.h  MMCZip.cpp  MMCZip.h  MangoHud.cpp  MangoHud.h  Markdown.cpp  (+18 more)
libraries/: README.md
libraries/launcher/: CMakeLists.txt
libraries/launcher/legacy/org/allauncher/legacy/: LegacyFrame.java  LegacyLauncher.java  LegacyProxy.java
libraries/launcher/legacy/org/allauncher/legacy/fix/online/: Handler.java  OnlineFixes.java  OnlineModeFix.java  SkinFix.java
libraries/launcher/legacy/org/allauncher/legacy/utils/: Base64.java
libraries/launcher/legacy/org/allauncher/legacy/utils/api/: MojangApi.java  Texture.java
libraries/launcher/legacy/org/allauncher/legacy/utils/json/: JsonParseException.java  JsonParser.java
libraries/launcher/legacy/org/allauncher/legacy/utils/url/: ByteArrayUrlConnection.java  UrlUtils.java
libraries/launcher/org/allauncher/: EntryPoint.java  SystemProperties.java
libraries/launcher/org/allauncher/exception/: ParameterNotFoundException.java  ParseException.java
libraries/launcher/org/allauncher/launcher/: Launcher.java
libraries/launcher/org/allauncher/launcher/impl/: AbstractLauncher.java  StandardLauncher.java
libraries/launcher/org/allauncher/legacy/: LegacyProxy.java
libraries/launcher/org/allauncher/utils/: Parameters.java  ReflectionUtils.java
libraries/launcher/org/allauncher/utils/logging/: Level.java  Log.java
libraries/launcher/org/prismlauncher/launcher/impl/: StandardLauncher.java
libraries/qt-qrcodegenerator/: CMakeLists.txt  qr.cpp  qr.h
nix/: README.md  unwrapped.nix  wrapper.nix
program_info/: CMakeLists.txt  allauncher.6.scd  allauncher.manifest.in  allauncher.rc.in  genicons.sh  org.allauncher.ALLauncher.metainfo.xml.in  org.prismlauncher.PrismLauncher.desktop.in  org.prismlauncher.PrismLauncher.metainfo.xml.in  win_install.nsi.in
resources/: icons.qrc
tests/: CMakeLists.txt  DataPackParse_test.cpp  DummyResourceAPI.h  FileSystem_test.cpp  Library_test.cpp  MetaComponentParse_test.cpp  Packwiz_test.cpp  ResourceFolderModel_test.cpp  ResourceModel_test.cpp  ResourcePackParse_test.cpp  ShaderPackParse_test.cpp  TexturePackParse_test.cpp  WorldSaveParse_test.cpp  XmlLogs_test.cpp
(+585 files in other folders)
